--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -27,6 +27,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/bootstrap-select.css",
               "node_modules/ngx-toastr/toastr.css",
+              "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "src/assets/css/style.css",
               "src/assets/css/resp-style.css",
               "src/assets/font/flaticon.css",
