--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "browser-detect": "^0.2.28",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "ngx-avatar": "^4.0.0",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-select-ex": "^6.0.1",
     "ngx-toastr": "^13.0.0",
