--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-select-ex": "^6.0.1",
     "ngx-toastr": "^13.0.0",
+    "ngx-ui-loader": "^10.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
