--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.5.1",
     "ngx-avatar": "^4.0.0",
     "ngx-google-places-autocomplete": "^2.0.5",
+    "ngx-image-cropper": "^3.3.2",
     "ngx-select-ex": "^6.0.1",
     "ngx-toastr": "^13.0.0",
     "ngx-ui-loader": "^10.0.0",
