--- a/middleware/package.json
+++ b/middleware/package.json
@@ -34,7 +34,8 @@
     "express-session": "^1.16.1",
     "express-socket.io-session": "^1.3.5",
     "form-data": "^2.4.0",
-    "formidable": "^1.2.1",
+    "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "helmet": "^3.18.0",
     "http": "0.0.0",
     "https": "^1.0.0",
