--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,10 +24,12 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/assets/css/bootstrap-select.css",
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css",
               "src/assets/css/style.css",
               "src/assets/css/resp-style.css",
               "src/assets/font/flaticon.css",
@@ -100,6 +102,8 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -131,6 +135,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "sap-world"
 }
