--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,15 @@
     "bootstrap": "^4.5.2",
     "browser-detect": "^0.2.28",
     "core-js": "^3.6.5",
+    "google-libphonenumber": "^3.2.15",
+    "intl-tel-input": "^17.0.3",
     "jquery": "^3.5.1",
+    "ng2-tel-input": "^2.3.0",
     "ngx-avatar": "^4.0.0",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-cropper": "^3.3.2",
+    "ngx-intl-tel-input": "^3.0.5",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-select-ex": "^6.0.1",
     "ngx-toastr": "^13.0.0",
