--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "ng2-tel-input": "^2.3.0",
     "ngx-avatar": "^4.0.0",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-doc-viewer": "^1.4.0",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-cropper": "^3.3.2",
     "ngx-intl-tel-input": "^3.0.5",
