--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -30,6 +30,8 @@
               "node_modules/ngx-toastr/toastr.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/intl-tel-input/build/css/intlTelInput.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.carousel.min.css",
+              "node_modules/ngx-owl-carousel-o/lib/styles/prebuilt-themes/owl.theme.default.min.css",
               "src/assets/css/style.css",
               "src/assets/css/resp-style.css",
               "src/assets/font/flaticon.css",
