--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-cropper": "^3.3.2",
     "ngx-intl-tel-input": "^3.0.5",
+    "ngx-owl-carousel-o": "^5.0.0",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-select-ex": "^6.0.1",
     "ngx-toastr": "^13.0.0",
