Updated new profile Changes( Create and Update form)

--- a/middleware/.env
+++ b/middleware/.env
@@ -1,4 +1,5 @@
-SERVICE_API_URL = http://65.0.146.153:1337
+SERVICE_API_URLs = http://65.0.146.153:1337
+SERVICE_API_URL = http://localhost:1337
 PORT = 5000
 NODE_ENV = development
 CLIENT_ID = TO8ZDYTJU3
