Staging env changing

--- a/middleware/.env
+++ b/middleware/.env
@@ -1,6 +1,6 @@
-SERVICE_API_URLs = http://65.0.146.153:1337
-SERVICE_API_URL = http://localhost:1337
-PORT = 5000
+SERVICE_API_URL = http://65.0.146.153:1338
+SERVICE_API_URLs = http://localhost:1337
+PORT = 6380
 NODE_ENV = development
 CLIENT_ID = TO8ZDYTJU3
 CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
