ENV File Updating

--- a/middleware/.env
+++ b/middleware/.env
@@ -1,6 +1,6 @@
 SERVICE_API_URLs = http://65.0.146.153:1337
 SERVICE_API_URL = http://localhost:1337
-STAGE_SERVICE_API_URL = http://localhost:1338
+STAGE_SERVICE_API_URL = http://65.0.146.153:1338
 PORT = 5000
 STAGE_PORT = 5001
 NODE_ENV = development
