--- a/middleware/.env
+++ b/middleware/.env
@@ -1,10 +1,6 @@
-SERVICE_API_URL = http://65.0.146.153:1337
-DEV_SERVICE_API_URL = http://localhost:1337
-STAGE_SERVICE_API_URL = http://65.0.146.153:1338
+SERVICE_API_URLs = http://65.0.146.153:1337
+SERVICE_API_URL = http://localhost:1337
 PORT = 5000
-STAGE_PORT = 5001
-NODE_ENV = staging
+NODE_ENV = development
 CLIENT_ID = TO8ZDYTJU3
-STAGE_CLIENT_ID = TO8ZDYTJU3
 CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
-STAGE_CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
