--- a/middleware/package.json
+++ b/middleware/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "npm test",
-    "start": "node app.js",
-    "PROD_start": "NODE_ENV=production node app.js",
-    "STAGE_start": "NODE_ENV=staging node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
