--- a/middleware/.env
+++ b/middleware/.env
@@ -4,6 +4,7 @@ STAGE_SERVICE_API_URL = http://65.0.146.153:1338
 PORT = 5000
 STAGE_PORT = 5001
 NODE_ENV = staging
+STAGE_NODE_ENV = staging
 CLIENT_ID = TO8ZDYTJU3
 STAGE_CLIENT_ID = TO8ZDYTJU3
 CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
