--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "bootstrap": "^4.5.2",
+    "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
     "core-js": "^3.6.5",
     "google-libphonenumber": "^3.2.15",
