--- a/middleware/.env
+++ b/middleware/.env
@@ -1,6 +1,14 @@
 SERVICE_API_URLs = http://65.0.146.153:1337
 SERVICE_API_URL = http://localhost:1337
+STAGE_SERVICE_API_URL = http://65.0.146.153:1338
+PRODUCTION_SERVICE_API_URL = http://52.204.92.226:1337
 PORT = 5000
-NODE_ENV = development
+STAGE_PORT = 5001
+PRODUCTION_PORT = 5000
+NODE_ENV = production
 CLIENT_ID = TO8ZDYTJU3
+STAGE_CLIENT_ID = TO8ZDYTJU3
+PRODUCTION_CLIENT_ID = TO8ZDYTJU3
 CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
+STAGE_CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
+PRODUCTION_CLIENT_SECRET = X2PY60EvMyCM8AO42wAjPa4bAaWmDF
