--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,6 +25,15 @@
             "styles": [
               "src/custom-theme.scss",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
+			  "./node_modules/@syncfusion/ej2-base/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-buttons/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-calendars/styles/material.css",
+		      "./node_modules/@syncfusion/ej2-dropdowns/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-inputs/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-lists/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-popups/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-navigations/styles/material.css",
+			  "./node_modules/@syncfusion/ej2-angular-schedule/styles/material.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
 			  "node_modules/bootstrap-select/dist/css/bootstrap-select.css",
               "node_modules/ngx-toastr/toastr.css",
