--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@ng-select/ng-select": "^5.0.8",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@syncfusion/ej2-angular-schedule": "^19.3.55",
     "bootstrap": "^4.5.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
