--- a/admin/angular.json
+++ b/admin/angular.json
@@ -42,6 +42,7 @@
               "src/assets/css/resp-style.css",       
 			  "./node_modules/owl.carousel/dist/assets/owl.carousel.min.css",  
               "./node_modules/owl.carousel/dist/assets/owl.theme.default.min.css" ,
+			  "./node_modules/intl-tel-input/build/css/intlTelInput.css",
               "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css"
             ],
             "scripts": [
