--- a/admin/package.json
+++ b/admin/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@kolkov/angular-editor": "^1.2.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngx-translate/core": "^13.0.0",
     "angular-datatables": "^12.0.0",
@@ -42,9 +43,13 @@
     "ng-apexcharts": "^1.5.1",
     "ng-inline-svg": "^10.1.0",
     "ngx-clipboard": "^13.0.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-highlightjs": "^4.1.3",
+    "ngx-image-cropper": "^4.0.1",
+    "ngx-intl-tel-input": "^3.1.1",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-ui-loader": "^11.0.0",
     "object-path": "^0.11.4",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.5.0",
