--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,74 +11,75 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^2.0.4",
-    "@angular/animations": "^13.2.4",
-    "@angular/cdk": "^13.2.4",
-    "@angular/common": "~13.2.4",
-    "@angular/compiler": "~13.2.4",
-    "@angular/core": "~13.2.4",
-    "@angular/forms": "~13.2.4",
-    "@angular/localize": "~13.2.4",
-    "@angular/material": "^13.2.4",
-    "@angular/platform-browser": "~13.2.4",
-    "@angular/platform-browser-dynamic": "~13.2.4",
-    "@angular/router": "~13.2.4",
-    "@kolkov/angular-editor": "^2.0.0",
+    "@angular-slider/ngx-slider": "^2.0.3",
+    "@angular/animations": "^12.0.3",
+    "@angular/cdk": "^12.0.3",
+    "@angular/common": "~12.0.3",
+    "@angular/compiler": "~12.0.3",
+    "@angular/core": "~12.0.3",
+    "@angular/forms": "~12.0.3",
+    "@angular/localize": "~12.0.3",
+    "@angular/material": "^12.0.3",
+    "@angular/platform-browser": "~12.0.3",
+    "@angular/platform-browser-dynamic": "~12.0.3",
+    "@angular/router": "~12.0.3",
+    "@kolkov/angular-editor": "^1.1.4",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ng-select/ng-select": "^8.1.1",
-    "@ngx-translate/core": "^14.0.0",
-    "@ngx-translate/http-loader": "^7.0.0",
-    "@syncfusion/ej2-angular-schedule": "^19.4.52",
+    "@ng-select/ng-select": "^5.0.8",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "@syncfusion/ej2-angular-schedule": "^19.3.55",
     "bootstrap": "^4.5.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
-    "core-js": "^3.21.1",
-    "google-libphonenumber": "^3.2.27",
-    "intl-tel-input": "^17.0.15",
-    "jquery": "^3.6.0",
-    "libphonenumber-js": "^1.9.49",
-    "lodash": "^4.17.21",
+    "core-js": "^3.6.5",
+    "google-libphonenumber": "^3.2.15",
+    "intl-tel-input": "^17.0.3",
+    "jquery": "^3.5.1",
+    "libphonenumber-js": "^1.9.10",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "ng2-charts": "^2.4.3",
     "ng2-daterangepicker": "^3.0.1",
     "ng2-tel-input": "^2.3.0",
-    "ngx-avatar": "^4.1.0",
-    "ngx-bootstrap": "^8.0.0",
-    "ngx-doc-viewer": "^2.1.2",
+    "ngx-avatar": "^4.0.0",
+    "ngx-bootstrap": "^6.2.0",
+    "ngx-doc-viewer": "^1.4.0",
     "ngx-google-places-autocomplete": "^2.0.5",
-    "ngx-image-cropper": "^6.1.0",
-    "ngx-intl-tel-input": "^3.1.3",
-    "ngx-owl-carousel-o": "^7.0.1",
-    "ngx-perfect-scrollbar": "^10.1.1",
-    "ngx-select-ex": "^8.0.1",
-    "ngx-toastr": "^14.2.1",
+    "ngx-image-cropper": "^3.3.2",
+    "ngx-intl-tel-input": "^3.0.5",
+    "ngx-owl-carousel-o": "^5.0.0",
+    "ngx-perfect-scrollbar": "^10.0.1",
+    "ngx-select-ex": "^6.0.1",
+    "ngx-toastr": "^13.0.0",
     "ngx-ui-loader": "^11.0.0",
     "popper.js": "^1.16.1",
-    "query-string": "^7.1.1",
-    "rxjs": "^7.5.4",
-    "rxjs-compat": "^6.6.7",
-    "secure-ls": "^1.2.6",
-    "tslib": "^2.3.1",
+    "query-string": "^6.13.7",
+    "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.3",
+    "secure-ls": "^1.2.3",
+    "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.5",
-    "@angular/cli": "~13.2.5",
-    "@angular/compiler-cli": "~13.2.4",
-    "@types/jasmine": "^3.10.3",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^17.0.21",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "^4.0.1",
-    "jasmine-spec-reporter": "^7.0.0",
-    "karma": "^6.3.16",
+    "@angular-devkit/build-angular": "~12.0.3",
+    "@angular/cli": "~12.0.3",
+    "@angular/compiler-cli": "~12.0.3",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.3.3",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-jasmine": "^4.0.1",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "^10.5.0",
-    "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.2.4"
   }
 }
