--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SAP-World-Admin",
-  "version": "7.1.7",
+  "version": "1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -12,76 +12,77 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/localize": "~11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/material-moment-adapter": "^11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "@fortawesome/fontawesome-free": "^5.15.1",
-    "@kolkov/angular-editor": "^1.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^8.0.0",
-    "@ngx-translate/core": "^13.0.0",
-    "angular-datatables": "^12.0.0",
-    "angular-in-memory-web-api": "^0.11.0",
-    "apexcharts": "^3.20.0",
+    "@angular/animations": "~13.2.4",
+    "@angular/cdk": "^13.2.4",
+    "@angular/common": "~13.2.4",
+    "@angular/compiler": "~13.2.4",
+    "@angular/core": "~13.2.4",
+    "@angular/forms": "~13.2.4",
+    "@angular/localize": "~13.2.4",
+    "@angular/material": "^13.2.4",
+    "@angular/material-moment-adapter": "^13.2.4",
+    "@angular/platform-browser": "~13.2.4",
+    "@angular/platform-browser-dynamic": "~13.2.4",
+    "@angular/router": "~13.2.4",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@kolkov/angular-editor": "^2.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "angular-datatables": "^13.0.1",
+    "angular-in-memory-web-api": "^0.13.0",
+    "apexcharts": "^3.33.1",
     "bootstrap": "^4.6.0",
-    "clipboard": "^2.0.6",
-    "datatables.net": "^1.10.20",
-    "datatables.net-bs4": "^1.10.20",
-    "datatables.net-dt": "^1.10.20",
-    "highlight.js": "^10.4.0",
+    "clipboard": "^2.0.10",
+    "datatables.net": "^1.11.4",
+    "datatables.net-bs4": "^1.11.4",
+    "datatables.net-dt": "^1.11.4",
+    "google-libphonenumber": "^3.2.27",
+    "highlight.js": "^11.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
     "jquery": "^3.6.0",
-    "moment": "^2.27.0",
-    "ng-apexcharts": "^1.5.1",
-    "ng-inline-svg": "^10.1.0",
-    "ngx-clipboard": "^13.0.1",
+    "moment": "^2.29.1",
+    "ng-apexcharts": "^1.7.0",
+    "ng-inline-svg": "^13.1.2",
+    "ngx-clipboard": "^15.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
-    "ngx-highlightjs": "^4.1.3",
-    "ngx-image-cropper": "^4.0.1",
-    "ngx-intl-tel-input": "^3.1.1",
+    "ngx-highlightjs": "^6.1.1",
+    "ngx-image-cropper": "^6.1.0",
+    "ngx-intl-tel-input": "^3.1.3",
     "ngx-owl-carousel": "^2.0.7",
-    "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-ui-loader": "^11.0.0",
-    "object-path": "^0.11.4",
+    "object-path": "^0.11.8",
     "owl.carousel": "^2.3.4",
-    "perfect-scrollbar": "^1.5.0",
+    "perfect-scrollbar": "^1.5.5",
     "popper.js": "^1.16.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^7.5.4",
     "secure-ls": "^1.2.6",
     "socicon": "^3.0.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.1",
+    "zone.js": "^0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
-    "@types/datatables.net": "^1.10.18",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "~2.0.8",
-    "@types/jquery": "^3.3.33",
-    "@types/node": "^14.11.10",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~5.2.3",
+    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular/cli": "~13.2.5",
+    "@angular/compiler-cli": "~13.2.4",
+    "@types/datatables.net": "^1.10.21",
+    "@types/jasmine": "^3.10.3",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.14",
+    "@types/node": "^17.0.21",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^4.0.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "webpack-cli": "^3.3.12",
+    "ts-node": "^10.5.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.5.5",
+    "webpack-cli": "^4.9.2",
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0"
   }
