bug fixing for admin module development (warning issues))

--- a/admin/angular.json
+++ b/admin/angular.json
@@ -17,13 +17,16 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+			 "optimization": false,
             "outputPath": "dist",
             "showCircularDependencies": false,
             "allowedCommonJsDependencies": [
               "object-path",
               "apexcharts",
               "clipboard.js",
-              "highlight.js"
+              "highlight.js",
+			  "ngx-owl-carousel",
+			  "ngx-google-places-autocomplete"
             ],
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -69,7 +72,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "optimization": true,
+               "optimization": {
+				  "scripts": true,
+				  "styles": {
+					"minify": true,
+					"inlineCritical": false
+				  },
+				  "fonts": true
+				},
               "outputHashing": "all",
               "sourceMap": false,
               "extractCss": true,
