--- a/middleware/package.json
+++ b/middleware/package.json
@@ -5,9 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "npm test",
-    "start": "node app.js",
-    "PROD_start": "NODE_ENV=production node app.js",
-    "STAGE_start": "NODE_ENV=staging node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -24,42 +22,42 @@
   },
   "homepage": "https://gitlab.com/studioqdotin/swingzen-frontend#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "connect-redis": "^3.4.1",
+    "axios": "^0.26.0",
+    "body-parser": "^1.19.2",
+    "connect-redis": "^6.1.1",
     "convict": "^5.0.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^16.0.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-session": "^1.16.1",
+    "express-session": "^1.17.2",
     "express-socket.io-session": "^1.3.5",
-    "form-data": "^2.4.0",
-    "formidable": "^1.2.2",
+    "form-data": "^4.0.0",
+    "formidable": "^2.0.1",
     "fs": "0.0.1-security",
-    "helmet": "^3.18.0",
+    "helmet": "^5.0.2",
     "http": "0.0.0",
     "https": "^1.0.0",
     "mime": "^2.4.4",
-    "morgan": "^1.9.1",
-    "ngx-toastr": "^13.1.0",
-    "nodemailer": "^6.3.0",
+    "morgan": "^1.10.0",
+    "ngx-toastr": "^14.2.2",
+    "nodemailer": "^6.7.2",
     "redis": "^2.8.0",
     "refresh-token": "^1.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "sails.io.js": "^1.2.1",
     "session.socket.io": "^0.2.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "stripe": "^7.5.4",
-    "uuid": "^3.3.2"
+    "socket.io": "^4.4.1",
+    "socket.io-client": "^4.4.1",
+    "stripe": "^8.207.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.4.4",
-    "standard": "^12.0.1"
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.17.0",
+    "standard": "^16.0.4"
   }
 }
