--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,16 +29,19 @@
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
     "@syncfusion/ej2-angular-schedule": "^19.4.52",
+    "amazing-time-picker": "^1.8.0",
     "bootstrap": "^4.5.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
+    "chart.js": "^2.9.3",
     "core-js": "^3.21.1",
     "google-libphonenumber": "^3.2.27",
     "intl-tel-input": "^17.0.15",
     "jquery": "^3.6.0",
     "libphonenumber-js": "^1.9.49",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
+    "lodash.isequal": "^4.5.0",
+    "moment": "^2.29.3",
     "ng2-charts": "^2.4.3",
     "ng2-daterangepicker": "^3.0.1",
     "ng2-tel-input": "^2.3.0",
@@ -48,9 +51,11 @@
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-image-cropper": "^6.1.0",
     "ngx-intl-tel-input": "^3.1.3",
+    "ngx-material-timepicker": "^5.5.3",
     "ngx-owl-carousel-o": "^7.0.1",
     "ngx-perfect-scrollbar": "^10.1.1",
     "ngx-select-ex": "^8.0.1",
+    "ngx-time-picker": "^12.0.0",
     "ngx-toastr": "^14.2.1",
     "ngx-ui-loader": "^11.0.0",
     "popper.js": "^1.16.1",
