--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,10 @@
 .settings/
 *.sublime-workspace
 
-
+# dependencies
+/frontend/node_modules
+/middleware/node_modules
+/admin/node_modules
 
 # profiling files
 chrome-profiler-events*.json
