--- a/middleware/.env
+++ b/middleware/.env
@@ -1,7 +1,7 @@
 SERVICE_API_URLs = http://65.0.146.153:1337
 SERVICE_API_URL = http://localhost:1337
 STAGE_SERVICE_API_URL = http://65.0.146.153:1338
-PRODUCTION_SERVICE_API_URL = https://api.sapworld.io:1339
+PRODUCTION_SERVICE_API_URL = http://api.sapworld.io:1339
 PORT = 5000
 STAGE_PORT = 5001
 PRODUCTION_PORT = 5003
