--- a/admin/package.json
+++ b/admin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "SAP-World-Admin",
-  "version": "1.0",
+  "version": "7.1.7",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,7 +26,7 @@
     "@angular/router": "~13.2.4",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@kolkov/angular-editor": "^2.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^12.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@ngx-translate/core": "^14.0.0",
     "angular-datatables": "^13.0.1",
     "angular-in-memory-web-api": "^0.13.0",
@@ -37,6 +37,7 @@
     "datatables.net-bs4": "^1.11.4",
     "datatables.net-dt": "^1.11.4",
     "google-libphonenumber": "^3.2.27",
+    "hammerjs": "^2.0.8",
     "highlight.js": "^11.4.0",
     "highlightjs-line-numbers.js": "^2.8.0",
     "jquery": "^3.6.0",
@@ -46,7 +47,7 @@
     "ngx-clipboard": "^15.0.1",
     "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-highlightjs": "^6.1.1",
-    "ngx-image-cropper": "^6.1.0",
+    "ngx-image-cropper": "^6.0.1",
     "ngx-intl-tel-input": "^3.1.3",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-perfect-scrollbar": "^10.1.1",
@@ -86,4 +87,8 @@
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0"
   }
+  
+  
 }
+
+
