--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "sideEffects": false,
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^13.2.4",
