--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,6 +22,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
+			"aot": true,
             "styles": [
               "src/custom-theme.scss",
               "./node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
