--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -39,5 +39,10 @@
       "es2018",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "enableIvy": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true
   }
 }
