--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -127,7 +127,13 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "sap-world:build:production"
+              "browserTarget": "sap-world:build:production",
+			  "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ],
             }
           }
         },
