--- a/admin/package.json
+++ b/admin/package.json
@@ -12,19 +12,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/cdk": "^11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/localize": "~11.0.0",
-    "@angular/material": "^11.0.0",
-    "@angular/material-moment-adapter": "^11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
+    "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.0",
+    "@angular/common": "^16.2.0",
+    "@angular/compiler": "^16.2.0",
+    "@angular/core": "^16.2.0",
+    "@angular/forms": "^16.2.0",
+    "@angular/localize": "^16.2.0",
+    "@angular/material": "^16.2.0",
+    "@angular/material-moment-adapter": "^16.2.0",
+    "@angular/platform-browser": "^16.2.0",
+    "@angular/platform-browser-dynamic": "^16.2.0",
+    "@angular/router": "^16.2.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
     "@ngx-translate/core": "^13.0.0",
     "angular-datatables": "^12.0.0",
@@ -42,9 +43,13 @@
     "ng-apexcharts": "^1.5.1",
     "ng-inline-svg": "^10.1.0",
     "ngx-clipboard": "^13.0.1",
+    "ngx-google-places-autocomplete": "^2.0.5",
     "ngx-highlightjs": "^4.1.3",
+    "ngx-image-cropper": "^7.0.2",
+    "ngx-intl-tel-input": "^3.2.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-perfect-scrollbar": "^9.0.0",
+    "ngx-ui-loader": "^13.0.0",
     "object-path": "^0.11.4",
     "owl.carousel": "^2.3.4",
     "perfect-scrollbar": "^1.5.0",
@@ -53,12 +58,12 @@
     "secure-ls": "^1.2.6",
     "socicon": "^3.0.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.0",
     "@types/datatables.net": "^1.10.18",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.8",
@@ -67,7 +72,7 @@
     "codelyzer": "^6.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~5.2.3",
+    "karma": "~6.4.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
@@ -75,7 +80,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
+    "typescript": "~4.9.5",
     "webpack-cli": "^3.3.12",
     "webpack-messages": "^2.0.4",
     "webpack-rtl-plugin": "^2.0.0"
