--- a/middleware/package.json
+++ b/middleware/package.json
@@ -22,42 +22,42 @@
   },
   "homepage": "https://gitlab.com/studioqdotin/swingzen-frontend#readme",
   "dependencies": {
-    "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
-    "connect-redis": "^3.4.1",
-    "convict": "^5.0.0",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "connect-redis": "^7.1.0",
+    "convict": "^6.2.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^16.3.1",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "express-socket.io-session": "^1.3.5",
-    "form-data": "^2.4.0",
-    "formidable": "^1.2.2",
+    "form-data": "^4.0.0",
+    "formidable": "^3.5.0",
     "fs": "0.0.1-security",
-    "helmet": "^3.18.0",
+    "helmet": "^7.0.0",
     "http": "0.0.0",
     "https": "^1.0.0",
-    "mime": "^2.4.4",
+    "mime": "^3.0.0",
     "morgan": "^1.9.1",
-    "ngx-toastr": "^13.1.0",
+    "ngx-toastr": "^17.0.2",
     "nodemailer": "^6.3.0",
-    "redis": "^2.8.0",
+    "redis": "^4.6.7",
     "refresh-token": "^1.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "sails.io.js": "^1.2.1",
     "session.socket.io": "^0.2.1",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
-    "stripe": "^7.5.4",
-    "uuid": "^3.3.2"
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
+    "standard": "^17.1.0",
+    "stripe": "^12.18.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.4.4",
-    "standard": "^12.0.1"
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "@babel/register": "^7.22.5"
   }
 }
