--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,7 +21,12 @@
 			"aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+			  {
+				  "glob": "**/*",
+				  "input": "./node_modules/@kolkov/angular-editor/assets/",
+				  "output": "./assets/fonts/"
+				}
             ],
 			"stylePreprocessorOptions": {
 				"includePaths": ["node_modules"]
