--- a/middleware/.env
+++ b/middleware/.env
@@ -2,6 +2,7 @@ SERVICE_API_URLs = http://65.0.146.153:1337
 SERVICE_API_URL = http://localhost:1337
 STAGE_SERVICE_API_URL = http://65.0.146.153:1338
 PRODUCTION_SERVICE_API_URL =http://localhost:1339
+REDIS_CLIENT_URL = redis://localhost:6379
 PORT = 5000
 STAGE_PORT = 5001
 PRODUCTION_PORT = 5003
