latest packages-update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,27 @@
   "private": true,
   "dependencies": {
     "@angular-magic/ngx-gp-autocomplete": "^1.0.4",
-    "@angular/animations": "^16.2.1",
+    "@angular/animations": "^16.2.2",
     "@angular/cdk": "^16.2.1",
-    "@angular/common": "~16.2.1",
-    "@angular/compiler": "~16.2.1",
-    "@angular/core": "~16.2.1",
-    "@angular/forms": "~16.2.1",
-    "@angular/localize": "~16.2.1",
+    "@angular/common": "^16.2.2",
+    "@angular/compiler": "^16.2.2",
+    "@angular/core": "^16.2.2",
+    "@angular/forms": "^16.2.2",
+    "@angular/localize": "^16.2.2",
     "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "~16.2.1",
-    "@angular/platform-browser-dynamic": "~16.2.1",
-    "@angular/router": "~16.2.1",
+    "@angular/platform-browser": "^16.2.2",
+    "@angular/platform-browser-dynamic": "^16.2.2",
+    "@angular/router": "^16.2.2",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@ng-select/ng-select": "^11.1.1",
-    "@nguniversal/express-engine": "^16.2.0",
     "@ngx-translate/core": "^15.0.0",
+	"@nguniversal/express-engine": "^16.2.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "@syncfusion/ej2-angular-schedule": "^22.2.8",
-    "@types/google.maps": "^3.53.6",
+    "@types/google.maps": "^3.54.0",
     "@types/jasmine": "^4.3.5",
     "@types/node": "^20.5.3",
     "angular-calendar": "^0.31.0",
@@ -84,7 +84,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "~16.2.1",
+    "@angular/compiler-cli": "^16.2.2",
     "@types/jasminewd2": "^2.0.10",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
