--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,50 +7,54 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run sap-world:serve-ssr",
+    "serve:ssr": "node dist/sap-world/server/main.js",
+    "build:ssr": "ng build && ng run sap-world:server",
+    "prerender": "ng run sap-world:prerender"
   },
   "private": true,
   "dependencies": {
     "@angular-magic/ngx-gp-autocomplete": "^1.0.4",
-    "@angular/animations": "^16.2.2",
+    "@angular/animations": "^16.2.1",
     "@angular/cdk": "^16.2.1",
-    "@angular/common": "^16.2.2",
-    "@angular/compiler": "^16.2.2",
-    "@angular/core": "^16.2.2",
-    "@angular/forms": "^16.2.2",
-    "@angular/localize": "^16.2.2",
+    "@angular/common": "~16.2.1",
+    "@angular/compiler": "~16.2.1",
+    "@angular/core": "~16.2.1",
+    "@angular/forms": "~16.2.1",
+    "@angular/localize": "~16.2.1",
     "@angular/material": "^16.2.1",
-    "@angular/platform-browser": "^16.2.2",
-    "@angular/platform-browser-dynamic": "^16.2.2",
-    "@angular/router": "^16.2.2",
+    "@angular/platform-browser": "~16.2.1",
+    "@angular/platform-browser-dynamic": "~16.2.1",
+    "@angular/platform-server": "~16.2.1",
+    "@angular/router": "~16.2.1",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "@ng-bootstrap/ng-bootstrap": "^15.1.1",
     "@ng-select/ng-select": "^11.1.1",
+    "@nguniversal/express-engine": "^16.2.0",
     "@ngx-translate/core": "^15.0.0",
-	"@nguniversal/express-engine": "^16.2.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@popperjs/core": "^2.11.6",
     "@syncfusion/ej2-angular-schedule": "^22.2.8",
-    "@types/google.maps": "^3.54.0",
-    "@types/jasmine": "^4.3.5",
+    "@types/google.maps": "^3.53.6",
     "@types/node": "^20.5.3",
     "angular-calendar": "^0.31.0",
     "bootstrap": "^4.6.2",
     "bootstrap-select": "^1.13.18",
     "browser-detect": "^0.2.28",
     "chart.js": "^4.3.3",
-    "codelyzer": "^6.0.2",
     "core-js": "^3.32.1",
     "date-fns": "^2.30.0",
+    "domino": "^2.1.6",
+    "express": "^4.15.2",
     "google-libphonenumber": "^3.2.27",
     "intl-tel-input": "^18.2.1",
-    "jasmine-core": "^5.1.0",
     "jquery": "^3.6.0",
-    "karma-chrome-launcher": "^3.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "libphonenumber-js": "^1.9.49",
+    "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "luxon": "^3.4.1",
@@ -72,24 +76,31 @@
     "ngx-ui-loader": "^13.0.0",
     "node-sass": "^9.0.0",
     "popper.js": "^1.16.1",
-    "protractor": "^7.0.0",
     "query-string": "^8.1.0",
     "rxjs": "^7.5.4",
     "rxjs-compat": "^6.6.7",
     "secure-ls": "^1.2.6",
     "tslib": "^2.6.2",
-    "typescript": "^5.1.6",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-devkit/build-angular": "^16.1.1",
     "@angular/cli": "^16.2.0",
-    "@angular/compiler-cli": "^16.2.2",
+    "@angular/compiler-cli": "~16.2.1",
+    "@nguniversal/builders": "^16.2.0",
+    "@types/express": "^4.17.0",
+    "@types/jasmine": "^4.3.5",
     "@types/jasminewd2": "^2.0.10",
+    "@types/node": "^16.11.7",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "^5.1.1",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.3.16",
+    "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
+    "protractor": "^7.0.0",
     "ts-node": "^10.5.0",
-    "tslint": "^6.1.3"
+    "tslint": "^6.1.3",
+    "typescript": "^5.1.6"
   }
 }
